# secha-transform

./: .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: phase3-log.md
scripts/phase3/: .env.template  README.md  get_uc_token.py  handshake.py  requirements.txt
src/secha_transform/: __init__.py  cli.py  config.py  logging.py
src/secha_transform/engine/: __init__.py  identity.py  models.py  transform.py  validation.py
src/secha_transform/io/: __init__.py  delta_sink.py  reader.py  writer.py
src/secha_transform/metadata/: __init__.py  loader.py
tests/: conftest.py  test_delta_integration.py  test_delta_sink_builders.py  test_io.py  test_transform_golden.py  test_transform_golden_procem.py  test_transform_unit.py  test_validation.py
