[project]
name = "secha-transform"
version = "0.1.0"
description = "Deterministic, config-driven transform engine: raw vendor data -> canonical (SECHA)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Anas Uddin" }]
license = { text = "Proprietary - SECHA project" }
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "structlog>=24.1",
    "fsspec>=2024.6",
    "pyarrow>=16.0",
]

[project.optional-dependencies]
# Phase 3: write canonical to Delta / Unity Catalog on the TUNI Spark Connect cluster.
spark = ["pyspark[connect]>=4.0", "delta-spark>=4.0"]
s3 = ["s3fs>=2024.6"]
azure = ["adlfs>=2024.4"]

[project.scripts]
secha-transform = "secha_transform.cli:app"

[dependency-groups]
dev = ["pytest>=8.2", "pytest-cov>=5.0", "mypy>=1.10", "ruff>=0.5", "pre-commit>=3.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/secha_transform"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN", "RUF"]
ignore = ["ANN401"]  # `Any` is legitimate at the YAML / fsspec / raw-record boundary

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["fsspec", "fsspec.*", "structlog", "structlog.*", "yaml", "pyarrow", "pyarrow.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
