[project]
name = "secha-transform"
version = "0.1.0"
description = "Deterministic, config-driven transform engine: raw vendor data -> canonical (SECHA)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Anas Uddin" }]
license = { text = "Proprietary - SECHA project" }
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "structlog>=24.1",
    "fsspec>=2024.6",
    "pyarrow>=16.0",
]

[project.optional-dependencies]
# Phase 3: write canonical to Delta / Unity Catalog on the TUNI Spark Connect cluster.
# pyspark-client is the slim Spark Connect client; PINNED to the server's Spark 4.1.1
# (Connect requires matching versions). Delta runs server-side; no client jar needed.
spark = ["pyspark-client==4.1.1"]
s3 = ["s3fs>=2024.6"]
azure = ["adlfs>=2024.4"]

[project.scripts]
secha-transform = "secha_transform.cli:app"

[dependency-groups]
dev = ["pytest>=8.2", "pytest-cov>=5.0", "mypy>=1.10", "ruff>=0.5", "pre-commit>=3.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/secha_transform"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN", "RUF"]
ignore = ["ANN401"]  # `Any` is legitimate at the YAML / fsspec / raw-record boundary

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["fsspec", "fsspec.*", "structlog", "structlog.*", "yaml", "pyarrow", "pyarrow.*"]
ignore_missing_imports = true

# pyspark (the optional spark extra) and its numpy dependency are never analysed:
# numpy's stubs need Python >= 3.12 syntax while this codebase is checked as 3.11,
# and skipping keeps local (extra installed) and CI (extra absent) behaviour identical.
[[tool.mypy.overrides]]
module = ["pyspark", "pyspark.*", "numpy", "numpy.*"]
ignore_missing_imports = true
follow_imports = "skip"

# pyarrow's stub coverage for pq.write_to_dataset varies by version (typed in some,
# untyped in others), which under strict + warn_unused_ignores makes an inline
# `# type: ignore` flip between required and unused across environments. Disabling the
# untyped-call check for just the writer module is version-stable in either direction:
# a disabled code that never fires is a harmless no-op, not an "unused" warning.
[[tool.mypy.overrides]]
module = ["secha_transform.io.writer"]
disable_error_code = ["no-untyped-call"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
